fix(theme-chalk): fix all table columns fixed show horizontal scrolling
#17004

--- a/packages/theme-chalk/src/table.scss
+++ b/packages/theme-chalk/src/table.scss
@@ -328,7 +328,7 @@
               content: '';
               position: absolute;
               top: 0px;
-              width: 10px;
+              // width: 10px;
               bottom: -1px;
               overflow-x: hidden;
               overflow-y: hidden;
